Added mutation, fuzz and web performance testing Cleaned up pict stuff to use Docker.

--- a/load-test/sample-load-test.yml
+++ b/load-test/sample-load-test.yml
@@ -8,7 +8,7 @@ scenarios:
   demo-load-test:
     headers:
       User-Agent: 'Mozilla/5.0 TrovitBot (X11; Linux x86_64) AppleWebKit/537.36'
-    # think-time: 500ms
+    #  think-time: gaussian(10s, 1.5s)
     requests:
     - https://casas.trovit.es/
     - https://casas.trovit.es/venta-nave
